# src/routes/product.route.ts
@@ -6,9 +6,10 @@ import productController from "../controllers/product.controller";
 const productRoutes = Router()
 
 productRoutes.post('/create', productController.createProduct);
-productRoutes.get('/list', productController.listProduct);
-productRoutes.get('/update', productController.updateProduct);
-productRoutes.get('/delete', productController.deleteProduct);
+productRoutes.get('/list/', productController.listProduct);
+productRoutes.get('/category/:idCategory', productController.listProductsCategory);
+productRoutes.get('/update/:productId', productController.updateProduct);
+productRoutes.get('/delete/:productId', productController.deleteProduct);
 productRoutes.post('/search', productController.searchInput);
 
 
